<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add">Add</string>
    <string name="add_student">Add Student Picture</string>
    <string name="choose_student">Choose Student</string>
    <string name="choose_subject">Choose Subject</string>
    <string name="time_type">Time Type</string>
    <string name="time_in">In</string>
    <string name="time_out">Out</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="add_photo">Add Photo</string>
    <string name="count_photo"></string>
    <string name="stop_attendance">Stop Attendance</string>
    <string name="start_attendance">Start Attendance</string>
    <string name="list_attendance">List of Attendance</string>
    <string name="submit">Submit</string>
</resources>